force-app/main/default/objects/Travel_Approval__c/Travel_Approval__c.object-meta.xml
<CustomObject>
    <description>Object for tracking all internal travel approvals.</description>
    <label>Travel Approval</label>
    <nameField>
        <displayFormat>TA{0000}</displayFormat>
        <label>Travel Approval ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>