force-app/main/default/objects/Travel_Approval__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the account associated to this travel</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Travel Approvals</relationshipLabel>
    <relationshipName>Travel_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>