force-app/main/default/objects/Travel_Approval__c/fields/Airfare__c.field-meta.xml
<CustomField>
    <fullName>Airfare__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>What is the cost of the airfare?</inlineHelpText>
    <label>Airfare</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>