force-app/main/default/objects/Travel_Approval__c/fields/Approved_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected__c</fullName>
    <inlineHelpText>Has this entry been approved or rejected</inlineHelpText>
    <label>Approved/Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
                <default>true</default>
                <label>Under Review</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>