force-app/main/default/objects/Travel_Approval__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>What is the cost of the hotel?</inlineHelpText>
    <label>Hotel</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>