force-app/main/default/objects/Travel_Approval__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>How many days is the duration?</inlineHelpText>
    <label>Number of Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>