force-app/main/default/objects/Travel_Approval__c/fields/Other_Costs__c.field-meta.xml
<CustomField>
    <fullName>Other_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Amount of ancillary costs.</inlineHelpText>
    <label>Other Costs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>