force-app/main/default/objects/Travel_Approval__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <inlineHelpText>What is the purpose of this travel?</inlineHelpText>
    <label>Purpose</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>